crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__imports.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(\"import \\\"hello\\\"\")"
---
Import(
    Normal,
    Str(
        "hello",
    ) from virtual:<test>:7-14,
) from virtual:<test>:0-14
