crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__infix_precedence-2.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(\"!a / !b\")"
---
BinaryOp(
    BinaryOp {
        lhs: UnaryOp(
            Not,
            Var(
                "a",
            ) from virtual:<test>:1-2,
        ) from virtual:<test>:0-2,
        op: Div,
        rhs: UnaryOp(
            Not,
            Var(
                "b",
            ) from virtual:<test>:6-7,
        ) from virtual:<test>:5-7,
    },
) from virtual:<test>:0-7
