crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__infix_precedence.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(\"!a && !b\")"
---
BinaryOp(
    BinaryOp {
        lhs: UnaryOp(
            Not,
            Var(
                "a",
            ) from virtual:<test>:1-2,
        ) from virtual:<test>:0-2,
        op: And,
        rhs: UnaryOp(
            Not,
            Var(
                "b",
            ) from virtual:<test>:7-8,
        ) from virtual:<test>:6-8,
    },
) from virtual:<test>:0-8
