crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__multiline_string.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(\"|||\\n    Hello world!\\n     a\\n|||\")"
---
Str(
    "Hello world!\n a\n",
) from virtual:<test>:0-31
