crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__reserved-2.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(\"nulla\")"
---
Var(
    "nulla",
) from virtual:<test>:0-5
