crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__reserved.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(\"null\")"
---
Literal(
    Null,
) from virtual:<test>:0-4
